tests/negative/regression/r5.orng
let const a: Bool = 0, []1